refactor(log): 重构日志配置与链路追踪集成
- 更新 Logstash 配置以禁用 ILM 并修复索引命名规则
- 为 Kibana 容器添加时区支持和区域信息映射
- 移除自定义 SkyWalking MDC 过滤器，采用官方工具包替代
- 修改 logback 配置使用 TraceIdMDCPatternLogbackLayout 统一格式
- 添加 SkyWalking GRPC 日志客户端 appender
- 更新网关过滤器使用标准 TraceContext 替代自定义实现
- 在多个服务的 logback 配置中更新 Logstash 目标地址
- 从 OMS 启动配置中移除 RabbitMQ 相关配置
- 优化 PMS 库存服务中的产品 ID 列表转换逻辑
- 移除已废弃的 SkyWalkingMdcTurboFilter 和 SkyWalkingTraceMdc 类